--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 
 body{
     font-family: "Manrope", sans-serif; 
-    font-size: 13px;
+    padding: 0 20px;
+    font-size: 12px;
     color: hsl(217, 19%, 35%);
     margin: 0;
     display: flex;
@@ -24,10 +25,12 @@ p{
     font-weight: 500;
 }
 .card-container{
+    background-color: #fff;
     display: flex;
     align-items: center;
     border-radius: 15px;
     width: 60%;
+    height: auto;
     max-width: 1000px !important;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
 }
@@ -37,16 +40,21 @@ p{
     border-radius: 15px 0 0 15px;
 }
 .text-container{
-    background-color: #fff;
-    padding: 20px 50px;
     height: 280px;
     border-radius: 0 15px 15px 0;
 }
+.text{
+    padding: 20px 50px;
+}
 .details{
-    height: 45px;
+    background-color: transparent;
+    height: 60px;
+    padding: 0 40px;
+    width: 100%;
+    max-width: 550px !important;
     position: relative;
     display: flex;
-    flex-direction: row;
+    /* flex-direction: column; */
     /* border: 1px solid black; */
     /* align-items: center; */
     /* justify-content: center; */
@@ -59,12 +67,12 @@ p{
 .author-name{
     position: absolute;
     transform: translateY(-50%);
-    left: 60px;
+    left: 110px;
 }
 .date{
     position: absolute;
-    bottom: 0;
-    left: 60px;
+    bottom:10px;
+    left: 110px;
 }
 .share-btn{
     background-color: hsl(214, 17%, 51%);
@@ -74,7 +82,8 @@ p{
     border-radius: 50%;
     right: 0;
     top: 50%;
-    transform: translateY(-20%);
+    transform: translate(-60%, -70%);
+    z-index: 100;
 }
 .social-media{
     position: absolute;
@@ -86,10 +95,10 @@ p{
     align-items: center;
     justify-content: flex-end;
     background-color: hsl(217, 19%, 35%);
-    transform: translate(40%, -80%);
+    transform: translate(30%, -100%);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    width: 50%;
-    width: 190px !important;
+    width: 100%;
+    max-width: 190px;
     border-radius: 5px;
 }
 .social-media.active{
@@ -108,17 +117,18 @@ span{
 .pintrest{
     margin-right: 15px !important;
 }
-@media(max-width: 1226px){
-    .text-container{
+@media(max-width: 1280px){
+    .text{
         padding: 10px 40px;
     }
     
 }
-@media(max-width: 1070px){
+@media(max-width: 1110px){
     .card-container{
         flex-direction: column;
         max-height: 70%;
         width: 400px;
+        border-radius: 15px;
     }
     .text-container{
         border-radius: 0 0 15px 15px;
@@ -127,26 +137,47 @@ span{
         width: 100%;
         border-radius: 15px 15px 0 0;
     }
+    .share-btn{
+        transform: translate(-30px, -12px);
+    }
 }
 @media(max-width: 600px){
     .social-media{
-        transform: translate(16%, -80%);
+        padding: 0 20px 0 20px;
+        justify-content: flex-start;
+        transform: translate(0%, 0.8%);
+        height: 94.8px;
+        border-radius: 0 0 15px 15px !important;
+        padding-left: 40px;
+        min-width: 100%;
+    }    
+    .share-btn{
+        transform: translate(-30px, 4px);
     }
-    
 }
 @media(max-width: 460px){
     body{
-        padding: 20px;
         font-size: 11px;
+    }
+    .details{
+        padding-bottom: 70px;
+    }
+    .date{
+        bottom: 30px;
+    } 
+    .share-btn{
+        transform: translate(-30px, -4px);
+    }
+    p{
+        margin: 0;
     }
     .text-container{
         height: auto;
-        padding: 20px 30px;
     }
     .author-name{
-        left: 55px;
+        left: 95px;
     }
     .date{
-        left: 55px;
-    }
+        left: 95px;
+    } 
 }
